# PlotTwist

./: CMakeLists.txt  README.md
Common/: CreateShaderProgram.cpp  File2String.cpp  File2String.h  File2String.h~
Game/: FragmentShader.fs  FragmentShader.fs~
Main/: main.cpp
